// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessagesReducer should handle all defined error types: rejected types GET_MESSAGE_REPORTS_RHSM 1`] = `
{
  "result": {
    "report": {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "meta": {},
      "pending": false,
      "status": 0,
    },
  },
  "type": "GET_MESSAGE_REPORTS_RHSM_REJECTED",
}
`;

exports[`MessagesReducer should handle all defined fulfilled types: fulfilled types GET_MESSAGE_REPORTS_RHSM 1`] = `
{
  "result": {
    "report": {
      "data": {
        "test": "success",
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": {},
      "pending": false,
      "status": 0,
    },
  },
  "type": "GET_MESSAGE_REPORTS_RHSM_FULFILLED",
}
`;

exports[`MessagesReducer should handle all defined pending types: pending types GET_MESSAGE_REPORTS_RHSM 1`] = `
{
  "result": {
    "report": {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": {},
      "pending": true,
    },
  },
  "type": "GET_MESSAGE_REPORTS_RHSM_PENDING",
}
`;
